--- a/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
@@ -251,7 +251,7 @@
                 getField('hts-entry-point.value').prop("selectedIndex", 9);
             }else if (htsStrategySelected == 159939 ){
                 getField('hts-entry-point.value').prop("selectedIndex", 10);
-            }else if (htsStrategySelected == 164954 || val == 164955){
+            }else if (htsStrategySelected == 164954 || htsStrategySelected == 164955){
                 getField('hts-entry-point.value').prop("selectedIndex", 8);
             }else{
                 getField('hts-entry-point.value').prop("selectedIndex", 0);
