--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -85,6 +85,7 @@ Green Card follow-up visit form
         var PATIENT_ON_TB = GREENCARD_VELOCITY.split(",")[1].split(":")[1];
         var PATIENT_ON_ART = GREENCARD_VELOCITY.split(",")[2].split(":")[1];
         var PATIENT_HAS_BEEN_ON_ART = GREENCARD_VELOCITY.split(",")[3].split(":")[1];
+        console.log("PATIENT_ON_IPT ==>"+PATIENT_ON_IPT);
         console.log("PATIENT_HAS_BEEN_ON_ART==>"+PATIENT_HAS_BEEN_ON_ART);
         console.log("PATIENT_ON_ART==>"+PATIENT_ON_ART);
 
