--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
@@ -109,6 +109,7 @@
             onWeightOrHeightChange();
             onEncounterDateChange();
             viralLoadValidation();
+            onPersonPresentChange();
             //Differentiated care
 //            var PATIENT_STABLE = "<lookup expression="kenyaemr.patientIsStable()" />";
 //            if(PATIENT_STABLE =="true") {
@@ -162,9 +163,78 @@
                 jq('input[name=pregoption][value=' + initialPregOption + ']').prop('checked', true);
                 setPregDateField(initialPregOption);
             }
+      //prophylaxis validation
+          jq('#dispense-ctx').click(onCtxDispenseClick);
+          jq('#dispense-dap').click(onDapDispenseClick);
         });
         //End on ready
-   function onPersonPresentChange() {
+ function onCtxDispenseClick() {
+     var dispensectxselected = getValue('dispense-ctx.value');
+     var dispensedapsoneselected = getValue('dispense-dap.value');
+     var ctx = jq("#dispense-ctx");
+     var dap = jq("#dispense-dap");
+     clearHiddenSections([dap]);
+     if(dispensectxselected == 1065) {
+         jq("#dispense-dap input[value=1065]").prop("checked", false);
+         jq('#dispense-dap :input').prop('disabled', true);
+         jq('#adherence-dapsone :input').prop('disabled', true);
+         jq('#adherence-dapsone :input').prop('checked', false);
+     }
+     if(dispensectxselected != 1065) {
+         jq("#dispense-dap input[value=1065]").prop("checked", false);
+         jq('#dispense-dap :input').prop('disabled', false);
+         jq('#adherence-dapsone :input').prop('disabled', false);
+     }
+ }
+ function onDapDispenseClick() {
+     var dispensedapsoneselected = getValue('dispense-dap.value');
+     var dispensectxselected = getValue('dispense-ctx.value');
+     var ctx = jq("#dispense-ctx");
+     var dap = jq("#dispense-dap");
+     clearHiddenSections([ctx]);
+     if(dispensedapsoneselected == 1065) {
+         jq("#dispense-ctx input[value=1065]").prop("checked", false);
+         jq('#dispense-ctx :input').prop('disabled', true);
+         jq('#adherence-ctx :input').prop('disabled', true);
+         jq('#adherence-ctx :input').prop('checked', false);
+     }
+     if(dispensedapsoneselected != 1065) {
+         jq("#dispense-ctx input[value=1065]").prop("checked", false);
+         jq('#dispense-ctx :input').prop('disabled', false);
+         jq('#adherence-ctx :input').prop('disabled', false);
+     }
+ }
+ function onCtxAdherenceClick() {
+     var adherencectxselected = getValue('adherence-ctx.value');
+     var adherencedapsoneselected = getValue('adherence-dapsone.value');
+     var ctx = jq("#adherence-ctx");
+     var dap = jq("#adherence-dapsone");
+     clearHiddenSections([dap]);
+     if(adherencectxselected != null) {
+         jq('#adherence-dapsone :input').prop("checked", false);
+         jq('#adherence-dapsone :input').prop('disabled', true);
+     }
+     if(adherencectxselected == null) {
+         jq('#adherence-dapsone :input').prop("checked", false);
+         jq('#dispense-dapsone :input').prop('disabled', false);
+     }
+ }
+ function onDapAdherenceClick() {
+     var adherencedapsoneselected = getValue('adherence-dapsone.value');
+     var adherencectxselected = getValue('adherence-ctx.value');
+     var ctx = jq("#adherence-ctx");
+     var dap = jq("#adherence-dapsone");
+     clearHiddenSections([ctx]);
+     if(adherencedapsoneselected != null) {
+         jq('#adherence-ctx :input').prop("checked", false);
+         jq('#adherence-ctx :input').prop('disabled', true);
+     }
+     if(adherencedapsoneselected == null) {
+         jq('#adherence-ctx input').prop("checked", false);
+         jq('#adherence-ctx :input').prop('disabled', false);
+     }
+ }
+ function onPersonPresentChange() {
             var tbScreeningResults = jq("#tb-screening");
             var nutStatus = jq("#nutritional-status");
             var whostage = jq("#whostage");
@@ -187,7 +257,11 @@
             var adherencectxselected = jq('#adherence-ctx');
             var adherencedapsoneselected = jq('#adherence-dapsone');
             if (getValue('person-present.value') == SELF) {
+                //adherence assessment validation
+                jq('#adherence-ctx').click(onCtxAdherenceClick);
+                jq('#adherence-dapsone').click(onDapAdherenceClick);
                 jq('.patient-details :input').prop('disabled', false);
+
             } else {
                 complaintSelected();
                 knownAllergiesSelected();
@@ -906,7 +980,7 @@
                              </div>
                          </th>
                          <td>(r)</td>
-                         <td colspan="2">
+                         <td>
                              <table id="tbl-complaints-today">
                                  <tr>
                                      <th style="color: #888">Complaint</th>
@@ -944,6 +1018,10 @@
                                  </repeat>
                              </table>
                              <hr width="0" />
+                         </td>
+                         <td>  <strong>Clinical Notes</strong><br/>
+                             <obs conceptId="160430AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" cols="60" id="clinical-notes"/>
+                                       <span class="value"><recentObs conceptId="160430AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
                          </td>
                      </tr>
                      <tr class="patient-details" id="general-exam-findings">
@@ -1219,7 +1297,7 @@
                                         conceptId="162229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                         answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                         answerLabels="Yes,No,Not applicable (N/A)"
-                                        style="radio"
+                                        style="radio" id="dispense-ctx"
                                 />
                             </td>
                         </tr>
@@ -1230,7 +1308,7 @@
                                         conceptId="164940"
                                         answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                         answerLabels="Yes,No,Not applicable (N/A)"
-                                        style="radio"
+                                        style="radio" id="dispense-dap"
                                 />
                             </td>
                         </tr>
@@ -1258,7 +1336,7 @@
                 <th colspan="3">Treatment Plan</th>
                 <td>(ac)</td>
                 <td colspan="2">
-                    <obs conceptId="160430AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="1" cols="80" id="treatment-plan"/>
+                    <obs conceptId="163104AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rows="1" cols="80" id="treatment-plan"/>
                 </td>
             </tr>
             <tr class="patient-details" >
@@ -1338,7 +1416,15 @@
                             <td>Has the client been given condoms this visit?</td>
                             <td><obs conceptId="159777AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                      answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                     answerLabels="Yes,No,Unkown" id="phdp-condoms"
+                                     answerLabels="Yes,No,Unknown" id="phdp-condoms"
+                                     style="radio"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Does the client abuse substances?</td>
+                            <td><obs conceptId="112603AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                     answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                     answerLabels="Yes,No,Unknown" id="phdp-disclosure"
                                      style="radio"/>
                             </td>
                         </tr>
@@ -1346,7 +1432,7 @@
                             <td>Has the Client disclosed HIV status to their sexually active partner?</td>
                             <td><obs conceptId="159423AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                      answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                     answerLabels="Yes,No,Unkown" id="phdp-disclosure"
+                                     answerLabels="Yes,No,Unknown" id="phdp-disclosure"
                                      style="radio"/>
                             </td>
                         </tr>
@@ -1354,7 +1440,7 @@
                             <td>Has the client's partner received on-site HIV testing?</td>
                             <td><obs conceptId="161557AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                      answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                     answerLabels="Yes,No,Unkown" id="phdp-testing"
+                                     answerLabels="Yes,No,Unknown" id="phdp-testing"
                                      style="radio"/>
                             </td>
                         </tr>
@@ -1362,7 +1448,7 @@
                             <td>Has the client been screened for STI (in this visit)?</td>
                             <td><obs conceptId="161558AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
                                      answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1067AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                                     answerLabels="Yes,No,Unkown" id="phdp-sti-screening"
+                                     answerLabels="Yes,No,Unknown" id="phdp-sti-screening"
                                      style="radio" />
                             </td>
                         </tr>
