--- a/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
@@ -247,6 +247,7 @@
             var prev_populationType = "<lookup expression="fn.latestObs(164930).getValueCoded()"/>";
             var prev_keyPopulationType = "<lookup expression="fn.latestObs(160581).getValueCoded()"/>";
             var prev_EverTested = "<lookup expression="fn.latestObs(164401).getValueCoded()"/>";
+            //Prepopulated fileds from the HTS forms
 //            console.log("Disability ==>"+prev_disability);
 //            console.log("Disability Type ==>"+prev_disabilityType);
 //            console.log("Population Type ==>"+prev_populationType);
@@ -259,9 +260,17 @@
             if (prev_disabilityType != "" || prev_disabilityType != null) {
                 jq("#disability input[type=checkbox][value=" + prev_disabilityType+ "]").prop("checked",true);
             }
+            if (prev_disability == 1066) {
+                jq("#has-disability input[value=1066]").prop("checked", true);
+                jq('#disability').hide();
+            }
             if (prev_populationType == 164929) {
                 jq("#population-type input[value=164929]").prop("checked", true);
                 jq('#key-population').show();
+            }
+            if (prev_populationType == 164928) {
+                jq("#population-type input[value=164928]").prop("checked", true);
+                jq('#key-population').hide();
             }
             if (prev_keyPopulationType != "" || prev_keyPopulationType != null) {
                 jq("#key-population input[type=checkbox][value=" + prev_keyPopulationType+ "]").prop("checked",true);
